appId: org.tzap.zmanager.mobile

---

- launchApp:
    clearState: true
- assertVisible: "ZManager"
- scrollUntilVisible:
    element: "Receive files"
    direction: DOWN
- tapOn: "Receive files"
- extendedWaitUntil:
    visible: ".*Receiving LocalSend files.*"
    timeout: 10000
