appId: org.tzap.zmanager.mobile

---

- launchApp:
    clearState: true
- assertVisible: "ZManager"
- tapOn: "Load nested fixture"
- scrollUntilVisible:
    element: "ZIP - 1 entries"
    direction: DOWN
- extendedWaitUntil:
    visible: "ZIP - 1 entries"
    timeout: 15000
- swipe:
    start: 50%, 80%
    end: 50%, 25%
    duration: 500
- assertVisible: "maestro-inner.zip"
- tapOn: "Open"
- scrollUntilVisible:
    element: "ZIP - 1 entries"
    direction: UP
- extendedWaitUntil:
    visible: "ZIP - 1 entries"
    timeout: 15000
- swipe:
    start: 50%, 80%
    end: 50%, 25%
    duration: 500
- assertVisible: "readme.txt"
- swipe:
    start: 50%, 25%
    end: 50%, 80%
    duration: 500
- tapOn: "Back"
- scrollUntilVisible:
    element: "maestro-nested.zip"
    direction: UP
- assertVisible: "maestro-nested.zip"
- swipe:
    start: 50%, 80%
    end: 50%, 25%
    duration: 500
- assertVisible: "maestro-inner.zip"
